# GeoFix

./: .dockerignore  .gitignore  Dockerfile  README.md  chainlit.md  cleanup.py  docs  mkdocs.yml  pyproject.toml  requirements.txt
.chainlit/: config.toml
.github/workflows/: ci.yml
docs/: cli.md  index.md  installation.md  quick-start.md
docs/api/: core.md  fixes.md  validation.md
examples/: 00_quick_start.ipynb  01_topology_validation.ipynb  02_auto_fix.ipynb  03_multi_format.ipynb
geofix/: .env.example  __init__.py  api.py  chainlit.md  cli.py  requirements.txt
geofix-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
geofix-frontend/src/: App.jsx  index.css
geofix/audit/: __init__.py  database.py  logger.py
geofix/chat/: __init__.py  agent.py  app.py  datalayer.py  prompts.py  tools.py
geofix/core/: __init__.py  cache.py  config.py  exceptions.py  models.py  router.py
geofix/decision/: __init__.py  confidence.py  engine.py  llm_reasoner.py  rules.py
geofix/fixes/: __init__.py  base.py  boundary.py  geometry.py  overlap.py  registry.py  road.py
geofix/integration/: __init__.py  geoqa_bridge.py  ovc_bridge.py
geofix/knowledge/: gis_encyclopedia.json
geofix/metadata/: __init__.py
geofix/storage/: __init__.py  conversations.py
geofix/utils/: __init__.py
geofix/validation/: __init__.py  validator.py
public/: geofix.js  theme.css
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_conversations.py  test_database.py  test_engine.py  test_models.py  test_router.py  test_rules.py
(+7 files in other folders)
