[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geofix"
version = "0.1.0"
description = "Autonomous geospatial data correction with conversational AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ammar Yasser", email = "ammar@example.com"},
]
keywords = ["geospatial", "gis", "quality-control", "ai", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.14.0",
    "shapely>=2.0",
    "pandas>=2.0",
    "folium>=0.15",
    "fiona>=1.9",
    "pyproj>=3.6",
    "rtree>=1.0",
    "chainlit>=1.0",
    "langchain>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-community>=0.2",
    "google-generativeai>=0.8",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
geofix = "geofix.chat.app:main"

[tool.setuptools.packages.find]
include = ["geofix*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
